This is the closesti might come

--- a/midfi_proto/Mathias/test (Kopie).html
+++ b/midfi_proto/Mathias/test (Kopie).html
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# video: http://ogp.me/ns/video#">
-<link href="http://de.static-watchever.com/web_de/globals_frfox-linux.css?ver=201412040952" media="all" rel="stylesheet" type="text/css">
+<link href="./../style.css" media="all" rel="stylesheet" type="text/css">
 <link href="http://de.static-watchever.com/web_de/SH-sheet_00-index_frfox-linux.css?ver=201412040952" media="all" rel="stylesheet" type="text/css">
 </head><body style="margin-top: 0px;">
 
@@ -8,19 +8,7 @@
         var fbAppId = "467760733255192";
         var fbRedirectUrl = "/filme/captain-america-the-first-avenger-441332?rc=1&browser=frfox-linux&connect=ok";
         var fbScope = "email,publish_actions,user_likes,friends_likes,user_birthday";           
-    </script>            <script>(function(w, d, s) {
-                    function go(){
-                        var js, fjs = d.getElementsByTagName(s)[0], load = function(url, id) {
-                        if (d.getElementById(id)) {return;}
-                        js = d.createElement(s); js.src = url; js.id = id;
-                        fjs.parentNode.insertBefore(js, fjs);
-                        };
-                            load('https://connect.facebook.net/de_DE/all.js#appId=467760733255192&xfbml=1', 'fbjssdk');
-                        }
-                        if (w.addEventListener) { w.addEventListener("load", go, false); }
-                        else if (w.attachEvent) { w.attachEvent("onload",go); }
-                        }(window, document, 'script'));
-                </script><fb:facepile max_rows="1" size="medium" width="200" data-href="http://www.watchever.de/filme/captain-america-the-first-avenger-441332" colorscheme="dark" class=" fb_iframe_widget" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=467760733255192&amp;color_scheme=dark&amp;href=http%3A%2F%2Fwww.watchever.de%2Ffilme%2Fcaptain-america-the-first-avenger-441332&amp;locale=de_DE&amp;max_rows=1&amp;sdk=joey&amp;size=medium&amp;width=200"><span style="vertical-align: top; width: 0px; height: 0px; overflow: hidden;"><iframe name="f29bdaf65c" width="200px" height="1000px" frameborder="0" allowtransparency="true" scrolling="no" title="fb:facepile Facebook Social Plugin" src="http://www.facebook.com/plugins/facepile.php?app_id=467760733255192&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter%2F7r8gQb8MIqE.js%3Fversion%3D41%23cb%3Df182fe9e94%26domain%3D%26origin%3Dfile%253A%252F%252F%252Ffd9d84c4%26relation%3Dparent.parent&amp;color_scheme=dark&amp;href=http%3A%2F%2Fwww.watchever.de%2Ffilme%2Fcaptain-america-the-first-avenger-441332&amp;locale=de_DE&amp;max_rows=1&amp;sdk=joey&amp;size=medium&amp;width=200" style="border: none; visibility: visible; width: 0px; height: 0px;"></iframe></span></fb:facepile>        </div><div class="clear"></div><div class="BTFACEBOOK  de_DE" xtclick="s2=4&amp;p=Product::Like&amp;ct=A&amp;multiEvent=1"><script type="text/javascript">
+    </script>           <fb:facepile max_rows="1" size="medium" width="200" data-href="http://www.watchever.de/filme/captain-america-the-first-avenger-441332" colorscheme="dark" class=" fb_iframe_widget" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=467760733255192&amp;color_scheme=dark&amp;href=http%3A%2F%2Fwww.watchever.de%2Ffilme%2Fcaptain-america-the-first-avenger-441332&amp;locale=de_DE&amp;max_rows=1&amp;sdk=joey&amp;size=medium&amp;width=200"><span style="vertical-align: top; width: 0px; height: 0px; overflow: hidden;"><iframe name="f29bdaf65c" width="200px" height="1000px" frameborder="0" allowtransparency="true" scrolling="no" title="fb:facepile Facebook Social Plugin" src="http://www.facebook.com/plugins/facepile.php?app_id=467760733255192&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter%2F7r8gQb8MIqE.js%3Fversion%3D41%23cb%3Df182fe9e94%26domain%3D%26origin%3Dfile%253A%252F%252F%252Ffd9d84c4%26relation%3Dparent.parent&amp;color_scheme=dark&amp;href=http%3A%2F%2Fwww.watchever.de%2Ffilme%2Fcaptain-america-the-first-avenger-441332&amp;locale=de_DE&amp;max_rows=1&amp;sdk=joey&amp;size=medium&amp;width=200" style="border: none; visibility: visible; width: 0px; height: 0px;"></iframe></span></fb:facepile>        </div><div class="clear"></div><div class="BTFACEBOOK  de_DE" xtclick="s2=4&amp;p=Product::Like&amp;ct=A&amp;multiEvent=1"><script type="text/javascript">
         var fbAppId = "467760733255192";
         var fbRedirectUrl = "";
         var fbScope = "email,publish_actions,user_likes,friends_likes,user_birthday";           
